add HTML scructure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,64 @@
     <title>Slider Gallery</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <main class="page">
+            <div class="slider swiper">
+                <div class="slider__wrapper slider-swiper">
+                    <div class="slider__slide slide swiper-slide">
+                        <div class="slide__body">
+                            <div class="slide__image">
+                                <img data-title="Coffe Beans" class="slide-picture" src="./img/beans2.jpg" alt="Image">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider__slide slide swiper-slide">
+                        <div class="slide__body">
+                            <div class="slide__image">
+                                <img data-title="City View" class="slide-picture" src="./img/city3.jpg" alt="Image">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider__slide slide swiper-slide">
+                        <div class="slide__body">
+                            <div class="slide__image">
+                                <img data-title="Coffe cups" class="slide-picture" src="./img/cups.jpg" alt="Image">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider__slide slide swiper-slide">
+                        <div class="slide__body">
+                            <div class="slide__image">
+                                <img data-title="Coffe Cups" class="slide-picture" src="./img/cups2.jpg" alt="Image">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider__slide slide swiper-slide">
+                        <div class="slide__body">
+                            <div class="slide__image">
+                                <img data-title="Coffe Work Place" class="slide-picture" src="./img/work-place-coffee1.jpg" alt="Image">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider__slide slide swiper-slide">
+                        <div class="slide__body">
+                            <div class="slide__image">
+                                <img data-title="Coffe City view" class="slide-picture" src="./img/work-place-coffee3.jpg" alt="Image">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider__slide slide swiper-slide">
+                        <div class="slide__body">
+                            <div class="slide__image">
+                                <img data-title="Coffe City View" class="slide-picture" src="./img/work-place-coffee5.jpg" alt="Image">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider__scrolbar"></div>
+            </div>
+        </main>
+    </div>
+    <script src="./js/script.js"></script>
 </body>
 </html>
