added css styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <main class="page">
             <div class="slider swiper">
-                <div class="slider__wrapper slider-swiper">
+                <div class="slider__wrapper slider-wrapper">
                     <div class="slider__slide slide swiper-slide">
                         <div class="slide__body">
                             <div class="slide__image">
@@ -43,20 +43,6 @@
                     <div class="slider__slide slide swiper-slide">
                         <div class="slide__body">
                             <div class="slide__image">
-                                <img data-title="Coffe Work Place" class="slide-picture" src="./img/work-place-coffee1.jpg" alt="Image">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slider__slide slide swiper-slide">
-                        <div class="slide__body">
-                            <div class="slide__image">
-                                <img data-title="Coffe City view" class="slide-picture" src="./img/work-place-coffee3.jpg" alt="Image">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slider__slide slide swiper-slide">
-                        <div class="slide__body">
-                            <div class="slide__image">
                                 <img data-title="Coffe City View" class="slide-picture" src="./img/work-place-coffee5.jpg" alt="Image">
                             </div>
                         </div>
@@ -66,6 +52,7 @@
             </div>
         </main>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
