--- a/index.html
+++ b/index.html
@@ -1,58 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Slider Gallery</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper">
-        <main class="page">
-            <div class="slider swiper">
-                <div class="slider__wrapper slider-wrapper">
-                    <div class="slider__slide slide swiper-slide">
-                        <div class="slide__body">
-                            <div class="slide__image">
-                                <img data-title="Coffe Beans" class="slide-picture" src="./img/beans2.jpg" alt="Image">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slider__slide slide swiper-slide">
-                        <div class="slide__body">
-                            <div class="slide__image">
-                                <img data-title="City View" class="slide-picture" src="./img/city3.jpg" alt="Image">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slider__slide slide swiper-slide">
-                        <div class="slide__body">
-                            <div class="slide__image">
-                                <img data-title="Coffe cups" class="slide-picture" src="./img/cups.jpg" alt="Image">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slider__slide slide swiper-slide">
-                        <div class="slide__body">
-                            <div class="slide__image">
-                                <img data-title="Coffe Cups" class="slide-picture" src="./img/cups2.jpg" alt="Image">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slider__slide slide swiper-slide">
-                        <div class="slide__body">
-                            <div class="slide__image">
-                                <img data-title="Coffe City View" class="slide-picture" src="./img/work-place-coffee5.jpg" alt="Image">
-                            </div>
-                        </div>
-                    </div>
+      <main class="page">
+        <div class="slider swiper">
+          <div class="slider__wrapper slider-wrapper">
+            <div class="slider__slide slide swiper-slide">
+              <div class="slide__body">
+                <div class="slide__image">
+                  <img
+                    data-title="Coffe Beans"
+                    class="slide-picture"
+                    src="./img/beans2.jpg"
+                    alt="Image"
+                  />
                 </div>
-                <div class="slider__scrolbar"></div>
+              </div>
             </div>
-        </main>
+            <div class="slider__slide slide swiper-slide">
+              <div class="slide__body">
+                <div class="slide__image">
+                  <img
+                    data-title="City View"
+                    class="slide-picture"
+                    src="./img/city3.jpg"
+                    alt="Image"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="slider__slide slide swiper-slide">
+              <div class="slide__body">
+                <div class="slide__image">
+                  <img
+                    data-title="Coffe cups"
+                    class="slide-picture"
+                    src="./img/cups.jpg"
+                    alt="Image"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="slider__slide slide swiper-slide">
+              <div class="slide__body">
+                <div class="slide__image">
+                  <img
+                    data-title="Coffe Cups"
+                    class="slide-picture"
+                    src="./img/cups2.jpg"
+                    alt="Image"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="slider__slide slide swiper-slide">
+              <div class="slide__body">
+                <div class="slide__image">
+                  <img
+                    data-title="Coffe City View"
+                    class="slide-picture"
+                    src="./img/work-place-coffee5.jpg"
+                    alt="Image"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider__scrolbar"></div>
+        </div>
+      </main>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script src="./js/script.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
