--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="wrapper">
       <main class="page">
-        <div class="slider swiper">
+        <div class="slider">
           <div class="slider__wrapper slider-wrapper">
             <div class="slider__slide slide swiper-slide">
               <div class="slide__body">
@@ -77,7 +77,8 @@
         </div>
       </main>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
     <script src="js/script.js"></script>
   </body>
 </html>
