fixed problems with swipper

--- a/index.html
+++ b/index.html
@@ -11,19 +11,7 @@
     <div class="wrapper">
       <main class="page">
         <div class="slider">
-          <div class="slider__wrapper slider-wrapper">
-            <div class="slider__slide slide swiper-slide">
-              <div class="slide__body">
-                <div class="slide__image">
-                  <img
-                    data-title="Coffe Beans"
-                    class="slide-picture"
-                    src="./img/beans2.jpg"
-                    alt="Image"
-                  />
-                </div>
-              </div>
-            </div>
+          <div class="slider__wrapper swiper-wrapper">
             <div class="slider__slide slide swiper-slide">
               <div class="slide__body">
                 <div class="slide__image">
@@ -47,12 +35,24 @@
                   />
                 </div>
               </div>
+            </div>          
+            <div class="slider__slide slide swiper-slide">
+              <div class="slide__body">
+                <div class="slide__image">
+                  <img
+                    data-title="Coffe Beans"
+                    class="slide-picture"
+                    src="./img/beans2.jpg"
+                    alt="Image"
+                  />
+                </div>
+              </div>
             </div>
             <div class="slider__slide slide swiper-slide">
               <div class="slide__body">
                 <div class="slide__image">
                   <img
-                    data-title="Coffe Cups"
+                    data-title="Coffe Cups2"
                     class="slide-picture"
                     src="./img/cups2.jpg"
                     alt="Image"
@@ -73,7 +73,7 @@
               </div>
             </div>
           </div>
-          <div class="slider__scrolbar"></div>
+          <div class="slider__scrollbar"></div>
         </div>
       </main>
     </div>
