changed photo in project

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
               <div class="slide__body">
                 <div class="slide__image">
                   <img
-                    data-title="City View"
+                    data-title="Mountain"
                     class="slide-picture"
-                    src="./img/city3.jpg"
+                    src="./img/photo1.jpg"
                     alt="Image"
                   />
                 </div>
@@ -28,9 +28,9 @@
               <div class="slide__body">
                 <div class="slide__image">
                   <img
-                    data-title="Coffe cups"
+                    data-title="Valley"
                     class="slide-picture"
-                    src="./img/cups.jpg"
+                    src="./img/photo2.jpg"
                     alt="Image"
                   />
                 </div>
@@ -40,9 +40,9 @@
               <div class="slide__body">
                 <div class="slide__image">
                   <img
-                    data-title="Coffe Beans"
+                    data-title="Traveller"
                     class="slide-picture"
-                    src="./img/beans2.jpg"
+                    src="./img/photo3.jpg"
                     alt="Image"
                   />
                 </div>
@@ -52,9 +52,9 @@
               <div class="slide__body">
                 <div class="slide__image">
                   <img
-                    data-title="Coffe Cups2"
+                    data-title="Photographer"
                     class="slide-picture"
-                    src="./img/cups2.jpg"
+                    src="./img/photo4.jpg"
                     alt="Image"
                   />
                 </div>
@@ -64,9 +64,9 @@
               <div class="slide__body">
                 <div class="slide__image">
                   <img
-                    data-title="Coffe City View"
+                    data-title="pine cones"
                     class="slide-picture"
-                    src="./img/work-place-coffee5.jpg"
+                    src="./img/photo5.jpg"
                     alt="Image"
                   />
                 </div>
